Fixed navbar overlapping issue

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    padding-top: 60px;
     text-align: center;
 }
 
@@ -35,7 +36,7 @@ nav ul li a {
 
 /* Main Content Style */
 section {
-    padding: 80px 20px;
+    padding: 100px 20px;
     margin-top: 60px;
 }
 
